Bug 134167 - No SDBC driver was found for sdbc:embedded:hsqldb
Summary: No SDBC driver was found for sdbc:embedded:hsqldb
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
: 133019 133708 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-20 12:41 UTC by xordevoreaux
Modified: 2020-06-23 18:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xordevoreaux 2020-06-20 12:41:13 UTC
Description:
Upon creating a new database, hitting Next produced this error:
https://i.imgur.com/17tg1R7.png

saying that the connection to the data source could not be established.

Steps to Reproduce:
1. Launch Base
2. Select File, New
3. Hit Next
4. Hit Finish
5. Hit Save


Actual Results:
external data source not established

Expected Results:
Connection to external data source should work.


Reproducible: Always


User Profile Reset: No



Additional Info:
This is 7.0.0.0 Beta 2.
Comment 1 xordevoreaux 2020-06-20 12:43:17 UTC
Version: 7.0.0.0.beta2 (x64)
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU threads: 8; OS: Windows 10.0 Build 20150; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 Julien Nabet 2020-06-20 15:49:26 UTC
How did you install LO?
On which distrib are you?

LO packages on tdf websites are more for repositories maintainers since you must deal with dependencies.
Comment 3 xordevoreaux 2020-06-20 18:49:35 UTC
(In reply to Julien Nabet from comment #2)
> How did you install LO?  
From the LO website. I selected Download, then went to the bottom and selected 7.0.0.0.

> On which distrib are you?
Shown above but here's repeating:
Version: 7.0.0.0.beta2 (x64)
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU threads: 8; OS: Windows 10.0 Build 20150; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

> 
> LO packages on tdf websites are more for repositories maintainers since you
> must deal with dependencies.
Comment 4 Julien Nabet 2020-06-20 20:07:48 UTC
Sorry about distrib question, dumb me, you had indeed indicated Win10.

Could you give a try at https://wiki.documentfoundation.org/QA/FirstSteps ?
Comment 5 xordevoreaux 2020-06-20 20:30:40 UTC
(In reply to Julien Nabet from comment #4)
> Sorry about distrib question, dumb me, you had indeed indicated Win10.
> 
> Could you give a try at https://wiki.documentfoundation.org/QA/FirstSteps ?

I followed that link, renamed the user directory to userx, started over, repeated all the initial steps above to create a db, and things got worse:

https://i.imgur.com/jM1cS2L.png

I think more internal testing needs to be done in the beta for windows. There's nothing more on my side I think I can do. This was a fresh install of beta 2 of 7.0.0.0 yesterday or the night before.
Comment 6 xordevoreaux 2020-06-20 20:31:31 UTC
Here's the crash report:

crashreport.libreoffice.org/stats/crash_details/7c93c564-b643-4437-b3e8-788fe1db5389
Comment 7 Julien Nabet 2020-06-21 07:36:33 UTC
Stephan: crash report shows
jfw_findAndSelectJRE(std::unique_ptr<JavaInfo,std::default_delete<JavaInfo> > *) 	C:\cygwin64\home\buildslave\source\libo-core\jvmfwk\source\framework.cxx:333 
thought you might be interested in this one.
Comment 8 Commit Notification 2020-06-21 23:22:31 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/642fc41cd7d080384658e10b30bb9d3b38a2cbd9

tdf#134167: jfw_plugin_getAllJavaInfos can successfully return empty list

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2020-06-22 07:15:58 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/6ae6c3faefc3863c34411d9d3517febb73507c8f

tdf#134167: jfw_plugin_getAllJavaInfos can successfully return empty list

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Telesto 2020-06-23 18:26:43 UTC
*** Bug 133019 has been marked as a duplicate of this bug. ***
Comment 11 Telesto 2020-06-23 18:26:57 UTC
*** Bug 133708 has been marked as a duplicate of this bug. ***