tdf#134167: jfw_plugin_getAllJavaInfos can successfully return empty list

Regression introduced with 6ba74150866d71469827de9f4f19268dfa7db137
"jfw::isAccessibilitySupportDesired is obsolete"

Change-Id: I696f3240fa8760ae156ac3b8b1fd1fe42f81c539